[tool.poetry]
name = "bppo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^2.3.0"
d4rl = {git = "https://github.com/Farama-Foundation/D4RL"}
cython = "<3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
